// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProgressBar /> > Default story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <div
      class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002 _progress-bar__valueLabel_2e61df"
    >
      <span
        class="_counter__count_172002"
      >
        33
        %
      </span>
    </div>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_0_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > DescriptionLabelAndValueStringResizingBehavior story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[366px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_8_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        We should prevent labels from being this long, but if they do, they wrap
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _progress-bar__valueLabel_2e61df"
    >
      50% of 100%
    </span>
  </div>
  <div
    aria-labelledby="_r_8_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.2;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > HorizontalLabelAndValueStringResizingBehavior story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-horizontal_2e61df w-[366px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_9_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        We should prevent labels from being this long, but if they do, they wrap
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _progress-bar__valueLabel_2e61df"
    >
      50% of 100%
    </span>
  </div>
  <div
    aria-labelledby="_r_9_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.2;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithCustomHorizontalValueLabel story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-horizontal_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _progress-bar__valueLabel_2e61df"
    >
      Value
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_5_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.5;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithDescriptionLabel story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_2_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Label
      </span>
    </label>
    <div
      class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002 _progress-bar__valueLabel_2e61df"
    >
      <span
        class="_counter__count_172002"
      >
        33
        %
      </span>
    </div>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_2_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithDescriptionLabelAndValueLabel story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_6_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Label
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _progress-bar__valueLabel_2e61df"
    >
      Value
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_6_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithHorizontalDescriptionLabel story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-horizontal_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_4_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Label
      </span>
    </label>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_4_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithLongDescriptionLabel story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_3_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        We should prevent labels from being this long, but if they do, they wrap
      </span>
    </label>
    <div
      class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002 _progress-bar__valueLabel_2e61df"
    >
      <span
        class="_counter__count_172002"
      >
        50
        %
      </span>
    </div>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_3_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.5;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithLongDescriptionLabelAndValueLabel story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[200px]"
>
  <div
    class="_progress-bar__labels_2e61df"
  >
    <label
      class="_label_76755a _label--md_76755a"
      id="_r_7_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        If both labels are long, it looks really wack
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _progress-bar__valueLabel_2e61df"
    >
      Fifty units of one hundred
    </span>
  </div>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_7_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;

exports[`<ProgressBar /> > WithNoLabels story renders snapshot 1`] = `
<div
  class="_progress-bar_2e61df _progress-bar--labelLayout-vertical_2e61df w-[200px]"
>
  <div
    aria-label="33 percent"
    aria-labelledby="_r_1_"
    class="_progress-bar__track_2e61df _progress-bar__track--context-standalone_2e61df"
    role="progressbar"
    style="--progress-bar__progress: 0.33;"
  >
    <div
      class="_progress-bar__content_2e61df"
    />
  </div>
</div>
`;
